# jspl_coil_ovality

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
jspl_coil_ovality/: __init__.py  config.py  deployment.py  detection.py  ovality_calculator.py  pipeline.py  scoring.py
